Add files by upload
Correction of chapters 1 & 2

--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -89,7 +89,7 @@ Titre, Affiliationt   &   \\
 Dr., Synchrotron SOLEIL & \\
 \textbf{Andrea Resta} & Codirecteur\\
 Dr., Synchrotron SOLEIL & \\
-\textbf{Marie-Ingrid Richard} & Coencadrante\\
+\textbf{Marie-Ingrid Richard} & {\color{DarkOrange}Co-directrice}\\
 Dr., CEA Grenoble & \\
 
 \end{tabular} 
