--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -18,14 +18,14 @@ Nature Catalysis editorial, 2018.
     \toprule
                 & Pressure    & Material       &     Temperature \\
     \midrule
-    Industry   & 1-12 bar & Wires ($\diameter \approx 80 \, \mu m$) & \textgreater 1000 K \\
+    Industry {\color{DarkOrange}[[Insert references]]}  & 1-12 bar & Wires (diameter $\approx 80 \, \mu m$) & \textgreater 1000 K \\
     \midrule
-    Literature & UHV, mbar & Single crystals & RT - 1000 K \\ \midrule
+    Literature {\color{DarkOrange}[[Insert references]]} & UHV, mbar & Single crystals & RT - 1000 K \\ \midrule
     This study & Near ambient    & Single crystals  & $\approx$ 750 K \\
                & pressure (0.5 bar)  & and nanoparticles & \\
     \bottomrule
     \end{tabular}
-    \caption{Material and pressure gap in heterogenous catalysis.}
+    \caption{Material and pressure gap in heterogenous catalysis. {\color{DarkOrange}[[I prefer the word diameter and not the symbol]]}}
     \label{tab:gap}
 \end{table}
 
@@ -34,7 +34,7 @@ Nature Catalysis editorial, 2018.
     \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
     \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
     \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
-    \caption{Platinum gazes used in industry (left), Pt particle measured at SixS, $\diameter$ is of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, $\diameter$ is of about 8 mm (right).}
+    \caption{Platinum gazes used in industry (left), {\color{DarkOrange}Reconstructed phase of a} Pt particle measured at SixS, {\color{DarkOrange}its diameter is} of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, {\color{DarkOrange}its diameter} is of about 8 mm (right).}
 \end{figure}
 
 \subsection{Crystal structures}
