Merciii, j'ai enlevé les commentaires sur l'approximation cinématique parce que je le dit à la toute fin

--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -87,9 +87,9 @@ Titre, Affiliationt   &   \\
 & \\
 \textbf{Alessandro Coati} & Directeur\\
 Dr., Synchrotron SOLEIL & \\
-\textbf{Andrea Resta} & Codirecteur\\
+\textbf{Andrea Resta} & Co-directeur\\
 Dr., Synchrotron SOLEIL & \\
-\textbf{Marie-Ingrid Richard} & {\color{DarkOrange}Co-directrice}\\
+\textbf{Marie-Ingrid Richard} & Co-directrice\\
 Dr., CEA Grenoble & \\
 
 \end{tabular} 
