--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -25,7 +25,7 @@ Nature Catalysis editorial, 2018.
                & pressure (0.5 bar)  & and nanoparticles & \\
     \bottomrule
     \end{tabular}
-    \caption{Material and pressure gap in heterogenous catalysis. {\color{DarkOrange}[[I prefer the word diameter and not the symbol]]}}
+    \caption{Material and pressure gap in heterogenous catalysis.}
     \label{tab:gap}
 \end{table}
 
@@ -34,7 +34,7 @@ Nature Catalysis editorial, 2018.
     \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
     \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
     \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
-    \caption{Platinum gazes used in industry (left), {\color{DarkOrange}Reconstructed phase of a} Pt particle measured at SixS, {\color{DarkOrange}its diameter is} of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, {\color{DarkOrange}its diameter} is of about 8 mm (right).}
+    \caption{Platinum gazes used in industry (left), Reconstructed phase of a Pt particle measured at SixS, its diameter is of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about 8 mm (right).}
 \end{figure}
 
 \subsection{Crystal structures}
